crates/kula-core/tests/corpus/invalid/rule-04-self-marriage.kula
person alice name:"Alice" gender:female

marriage m_alice_alice alice alice start:1972-05-12
